0027624: ViewerTest - vdrawtext command ignores text display options

vdrawtext command was corrected to set the specified text display type
regardless of other options.